# kawauso

./: .env.example  .env.sample  .gitignore  Cargo.toml  README.md  add_sigfield_pikepdf.py  extract_text_rows.py  sign_pdf_pyhanko.py
src/: config.rs  main.rs  pdf_handler.rs  r2_client.rs  receipt_printer.rs
